Added a header and a footer.

--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React App</title>
+    <meta name="viewport" content="width=device-width, initial-scale=0.5" />
+    <title>Periodic game by Josef</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <script src="./src/index.js" type="text/jsx"></script>
     <div id="root"></div>
   </body>
 </html>
